[package]
name = "vpn"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.177"
mio = { version = "1.1.0", features = ["net", "os-poll", "os-ext"] }
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
